<resources>
    <string name="app_name">Shoes Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_label_text">Email</string>
    <string name="password_label_text">Password</string>
    <string name="title_text">Login</string>
    <string name="login_button_text">Sign In</string>
    <string name="register_button_text">Register</string>
    <string name="welcome_header">Shoe Store Management!</string>
    <string name="welcome_body">The ultimate place to manage your personal Shoe Store!</string>
    <string name="next_button">Continue</string>
    <string name="welcome_info_text">More info on the next screen,\nwhat are you waiting for?\nPress Continue!</string>
    <string name="logo_welcome_text">Logo</string>
    <string name="first_info_text">- In the next screen you will see a list of the shoes available that allows you to consult your existing shoes and add new ones</string>
    <string name="second_info_text">- You will be able to modify existing shoes, or add new ones using the appropriate buttons, do not forget to save!</string>
    <string name="confirm_button_text">Confirm</string>
    <string name="shoes_list_title">Your Shoes:</string>
    <string name="login_nav_label">Login</string>
    <string name="welcome_nav_label">Welcome</string>
    <string name="instructions_nav_label">Instructions</string>
    <string name="shoeslist_nav_label">Your Shoes</string>
    <string name="details_nav_label">Details</string>
    <string name="logout_nav_label">Logout</string>
    <string name="details_title">Add Shoes</string>
    <string name="details_name_label">Name</string>
    <string name="details_company_label">Company</string>
    <string name="details_size_label">Size</string>
    <string name="details_description_label">Description</string>
    <string name="details_save_btn">Save</string>
    <string name="details_cancel_btn">Cancel</string>
</resources>