<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="welcomeViewModel"
            type="com.abcode.shoestore.screens.welcome.WelcomeFragment" />
    </data>

    <!-- Constraint Layout because I prefer to have more control on where the items on the screen are placed -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcome_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.welcome.WelcomeFragment">

        <View
            android:id="@+id/view"
            android:layout_width="411dp"
            android:layout_height="568dp"
            android:background="@drawable/ic_wave_bkg_header"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/welcome_body"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="388dp"
            android:fontFamily="@font/roboto"
            android:text="@string/welcome_body"
            android:textAlignment="center"
            android:textColor="@color/lightBlack"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/next_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/blob_image"
            android:layout_width="238dp"
            android:layout_height="225dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/logo_welcome_text"
            android:src="@drawable/ic_blob"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/shopping_image"
            android:layout_width="129dp"
            android:layout_height="144dp"
            android:layout_marginTop="56dp"
            android:contentDescription="@string/logo_welcome_text"
            android:src="@drawable/ic_shopping_basket"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/welcome_info_text"
            android:textAlignment="center"
            android:textColor="@color/lightBlack"
            app:layout_constraintBottom_toTopOf="@+id/next_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_body"
            app:layout_constraintVertical_bias="0.225" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>