<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_200"
        android:backgroundTint="@color/purple_200">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="155dp"
            android:layout_height="144dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/ic_baseline_info_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/first_info_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="104dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/first_info_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/second_info_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/second_info_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_info_text" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="59dp"
            android:layout_height="51dp"
            android:layout_marginStart="68dp"
            android:src="@drawable/ic_baseline_format_list_numbered_24"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="59dp"
            android:layout_height="51dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_baseline_edit_road_24"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="59dp"
            android:layout_height="51dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="68dp"
            android:src="@drawable/ic_baseline_done_all_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/purple_500"
            android:text="@string/confirm_button_text"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/second_info_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>